# bit-twiddler-rs

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cron.rs  crypto.rs  dialog.rs  markdown.rs  mod.rs  qr.rs  sql.rs  yaml.rs
src-tauri/ui/: index.html  styles.css
src-tauri/ui/js/: utils.js
src-tauri/ui/js/core/: about.js  favorites.js  navigation.js  shortcuts.js  theme.js
src-tauri/ui/js/tools/: base.js  base64.js  baud.js  carray.js  case.js  cobs.js  color.js  crc.js  diff.js  endian.js  epoch.js  http.js  json.js  jwt.js  mime.js  naming.js  protocols.js  regex.js  string.js  transform.js  unit.js  url.js  uuid.js
ui/: styles.css
ui-src/: input.css
ui/js/: sidebar-logic.js  tauri-api.js
ui/js/tools/: beautify.js  bits.js  cidr.js  cron.js  divider.js  entities.js  hash.js  limits.js  lorem.js  markdown.js  password.js  pem.js  qformat.js  qr.js  resistor.js  sql.js  yaml.js
